stable; first debug prints running

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,10 @@
 platform = espressif8266
 board = d1_mini_pro
 framework = arduino
+
+; https://platformio.org/lib/
+
+lib_deps = 
+;    1379    ;DS3231
+;    274     ;RTC
+;    78      ;DS3232RTC
