broken; can't figure out why interrupt won't trigger

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,8 @@ platform = espressif8266
 board = d1_mini_pro
 framework = arduino
 
+build_flags = -Wall -Werror
+
 ; https://platformio.org/lib/
 
 lib_deps = 
