calling handler & multiple buttons still not possible

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,9 @@ build_flags = -Wall -Werror
 
 ; https://platformio.org/lib/
 
+; debugging infos
+monitor_speed = 115200
+
 lib_deps = 
 ;    1379    ;DS3231
 ;    274     ;RTC
