started with LED_manager, button 2 steps through brightness

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "initializer_list": "cpp",
         "functional": "cpp",
         "*.tcc": "cpp",
-        "tuple": "cpp"
+        "tuple": "cpp",
+        "streambuf": "cpp"
     }
 }
