--- a/platformio.ini
+++ b/platformio.ini
@@ -13,14 +13,15 @@ platform = espressif8266
 board = d1_mini_pro
 framework = arduino
 
-build_flags = -Wall -Werror
+build_flags = -Wall ;-Werror
 
 ; https://platformio.org/lib/
 
 ; debugging infos
 monitor_speed = 115200
 
-lib_deps = 
+lib_deps = FastLED    
+;FastLED
 ;    1379    ;DS3231
 ;    274     ;RTC
 ;    78      ;DS3232RTC
